  velocities are defined in physical space, not device-local space.
- Fixed linear and angular velocities in Oculus Rift tracking driver;
  transformed from device-local to physical space.
- Added motion prediction for tracked devices to
  Vrui::InputDeviceAdapterDeviceDaemon.
- Added extension class GLARBInstancedArrays for GL_ARB_instanced_arrays
  extension.
- Added isDirect method to GLContext.
- Added extension class GLARBTextureMultisample for
  GL_ARB_texture_multisample extension.
- Cleaned up redundant uses of extension name strings in OpenGL
  extension classes.
- Added support for front buffer rendering to Vrui::VRWindow and did
  some minor clean-up.
- First version of Vrui::LensCorrector class ready:
  - Fully configurable for DK1, DK2, DK2 in rotated mode.
    - See Vrui Configuration File Reference for configuration options.
  - Lens distortion and chromatic aberration correction.
  - Support for OLED response time correction ("black smear" fix).
- Added new class Math::Histogram to create histograms of values of
  arbitrary scalar types.
- Added missing #include <Math/Math.h> to Images/ExtractBlobs.icpp and
  added MYMATH as dependency to MYIMAGES.
- Redid the internal API of Video::VideoDevice and derived classes to
  support dynamic registration of custom video device classes.
- Improved device enumeration code in Video::V4L2VideoDevice by only
  stopping when no more device nodes exist, not on other errors.
- Changed videoFd element in Video::V4L2VideoDevice to protected to
  allow deriving the class for quirky devices.
- Added Video::OculusRiftDK2VideoDevice as a subclass of
  Video::V4L2VideoDevice to support the tracking camera's quirky
  interface.
- Added fudge value to detect rank-deficient systems to
  Math::Matrix::solveLinearEquations.
- Added missing include files in USB/TransferBuffer.h and
  USB/TransferBuffer.cpp.
- Added initial version of RawHID library to Vrui installation.