@@ -40,19 +40,19 @@ section localhost
 			
 			# Accelerometer and magnetometer correction values. These are just
 			# examples; proper values must be determined by calibration.
-			accelCorrection ((1.00063, 0.00117503, -0.000188967), \
-			                 (0.00117503, 1.00053, 0.00181332), \
-			                 (-0.000188967, 0.00181332, 0.99884), \
-			                 (-488.375, -133.615, -171.469))
-			magCorrection ((1.06636, 0.016573, 0.00324851), \
-			               (0.016573, 1.01692, -0.0276182), \
-			               (0.00324851, -0.0276182, 0.923162), \
-			               (814.3, -3547.97, -7272.02))
-			
+			# accelCorrection ((1.00063, 0.00117503, -0.000188967), \
+			#                  (0.00117503, 1.00053, 0.00181332), \
+			#                  (-0.000188967, 0.00181332, 0.99884), \
+			#                  (-488.375, -133.615, -171.469))
+			# magCorrection ((1.06636, 0.016573, 0.00324851), \
+			#                (0.016573, 1.01692, -0.0276182), \
+			#                (0.00324851, -0.0276182, 0.923162), \
+			#                (814.3, -3547.97, -7272.02))
+			# 
 			neckPivot (0.0, -6.0, 3.0)
 			driftCorrectionWeight 0.0001
-			useMagnetometer true
-			motionPredictionDelta 0.020
+			# useMagnetometer true
+			# motionPredictionDelta 0.020
 			updateRate 4 # Update 250 times per second, to match the Razer Hydra's rate
 			
 			calibratorName Calibrator
@@ -67,7 +67,7 @@ section localhost
 				# align X axis (magnetic north) with preferred direction;
 				# translate to viewing position (sitting down)
 				transformation translate (0.0, -24.0, 50.0) \
-				               * rotateAround (0.0, -3.0, -6.0), (0.0, 0.0, 1.0), -22.0 \
+				               * rotateAround (0.0, -3.0, -6.0), (0.0, 0.0, 1.0), 0.0 \
 				               * rotate (1.0, 0.0, 0.0), 90.0
 			endsection
 		endsection
